minor edits, fix biblio entry

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -247,7 +247,7 @@
 
 @article{kr18,
   title={Assessment of the Lagrange Discrete Ordinates Equations for Three-Dimensional Neutron Transport},
-  author={Rowland, Kelly L. and Ahrens, Cory D. and Hamilton, Steven and Slaybaugh, RN},
+  author={Rowland, Kelly L. and Ahrens, Cory D. and Hamilton, Steven and Slaybaugh, R. N.},
   journal={Nuclear Science and Engineering},
   pages={1--20},
   year={2018},
